added library dependencies

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-
+[config]
+# Dependencies
+# LinkedList, ArduinoJson, ESP8266_SSD1306, Adafruit Neopixel
+lib_deps = LinkedList, ArduinoJson, ESP8266_SSD1306, 28
 
 [env:nodemcu]
+lib_deps = ${config.lib_deps}
 platform = espressif8266
 framework = arduino
-board = nodemcu
+board = nodemcuv2
 
